update student section